# qml_calculator

Calculator/: ButtonDigit.qml  ButtonOperator.qml  ButtonTemplate.qml  CMakeLists.txt  Main.qml  main.cpp  resources.qrc
